# thundersvm

./: CMakeLists.txt  env.sh  exp.sh
include/thundersvm/: config.h.in  dataset.h  global.h  kernelmatrix.h  svmparam.h  syncmem.h  thundersvm.h
include/thundersvm/kernel/: kernelmatrix_kernel.h  smo_kernel.h
include/thundersvm/model/: svc.h  svmmodel.h
include/thundersvm/solver/: csmosolver.h
include/thundersvm/util/: common.h
numa/usr/lib/: libnuma.so.1.0.0
src/thundersvm/: CMakeLists.txt  cmdparser.cpp  dataset.cpp  kernelmatrix.cpp  syncmem.cpp  thundersvm-predict.cpp  thundersvm-train.cpp
src/thundersvm/kernel/: kernelmatrix_kernel.cpp  smo_kernel.cpp
src/thundersvm/model/: svc.cpp  svmmodel.cpp
src/thundersvm/solver/: csmosolver.cpp
